package NYT.NHiveClient.NProto;

////////////////////////////////////////////////////////////////////////////////

message TTimestampMap
{
    repeated int32 cell_tags = 1;
    repeated uint64 timestamps = 2;
}

////////////////////////////////////////////////////////////////////////////////
